# exdyn

./: README.md  setup.cfg
src/: commons.py  condiff.py  modules.py  visualization.py  workflow.py
src/exdyn/: commons.py  dataset.py  funcs.py  jac_fluct.py  utils.py  workflow.py
tutorial/: analyze_batched_experimental_conditions.ipynb  scc_analysis_colocalization.ipynb  scc_analysis_colocalization_conditions.ipynb  sim_analysis_batched_experimental_conditions.ipynb
