[metadata]
name = exdyn
version=0.0.1
author = Kojima Yasuhiro
author_email = tiisaishima@gmail.com
description = Analyze cell state dynamics dependent on extrinsic factors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kojikoji/exdyn
project_urls =
	     Bug Tracker = https://github.com/kojikoji/exdyn/issues
classifiers =
	    Programming Language :: Python :: 3
	    License :: OSI Approved :: MIT License
	    Operating System :: OS Independent
[options]
package_dir =
	    = src
packages = find:
python_requires = >=3.9
install_requires =
		scanpy>=1.7.2
		torch>=1.11.0
		pytorch-lightning>=1.6.1,<1.7.0
		scvelo>=0.2.3
        pandas>=1.4.2
        numpy>=1.21.6
        functorch>=0.1.1
        torchsde>=0.2.5
        einops>=0.4.1
        leidenalg>=0.8.9
[options.packages.find]
where = src